[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ['py38']


[tool.isort]
line_length = 88
profile = "black"


[tool.ruff]
# Rules: https://docs.astral.sh/ruff/rules
select = [
    'A', 'B', 'C', 'D4', 'E', 'F', 'G', 'N', 'S', 'Q', # D
    'NPY', 'DTZ', 'RUF', 'PT', 'PL', 'FA', 'SIM', 'UP',
    'EXE', 'ICN', 'PIE', 'PYI', 'TID', 'YTT', 'ANN', 'BLE',
]
ignore = ["A003", "ANN101", "ANN102", "ANN204", "ANN401"]

include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
line-length = 100
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"img2text.py" = ["PLR0913"]


[tool.ruff.mccabe]
max-complexity = 8
